--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,13 +4,14 @@
 </head>
 <body>
 <div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
-	<h1>TCBL User  Manager</h1>
+	<h1>TCBL Login</h1>
 
 	<main>
-		<div class="columns">
-			<p>Welcome to the TCBL User Management application!</p>
-			<p>If you forgot your password, you can reset it.</p>
-			<p sec:authorize="hasRole('ROLE_ANONYMOUS')">If you want to change the information you share with TCBL services, first log in.</p>
+		<div>
+			<p>TCBL login uses the OpenID Connect technology for Single Sign On to access participating TCBL Services.</p>
+			<p>When you navigate between TCBL services, your TCBL account is recognized and as far as you agree, the profile information you added to it is passed on.</p>
+			<p>You have full control over your profile information. and how it is used by other services.</p>
+			<p>If you do not have a TCBL Single Sign On account yet, this is a good time to sign up.</p>
 		</div>
 	</main>
 </div>
