--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
-	<h1>TCBL Login</h1>
+	<h1>TCBL User Manager</h1>
 
 	<main>
 		<div>
