Some GUI cosmetics...

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -6,23 +6,25 @@
 <div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Manage your information</h1>
 	<main>
-		<form action="#" th:action="@{/user/update}" th:object="${tcblUser}" method="post">
-			<fieldset>
-				<legend>Your information</legend>
-				<div class="row">
-					<div class="columns large-2">
-						<label for="firstName">First name</label>
-						<input type="text" th:field="*{firstName}" required/><br>
+		<th:block th:if="${tcblUser} != null">
+			<form action="#" th:action="@{/user/update}" th:object="${tcblUser}" method="post">
+				<fieldset>
+					<legend>Your information</legend>
+					<div class="row">
+						<div class="columns large-2">
+							<label for="firstName">First name</label>
+							<input type="text" th:field="*{firstName}" required/><br>
+						</div>
+						<div class="columns large-2">
+							<label for="lastName">Last name</label>
+							<input type="text" th:field="*{lastName}" required/><br>
+						</div>
 					</div>
-					<div class="columns large-2">
-						<label for="lastName">Last name</label>
-						<input type="text" th:field="*{lastName}" required/><br>
-					</div>
-				</div>
-			</fieldset>
-			<input type="hidden" th:field="*{id}"/>
-			<input type="submit" value="Update" class="red-button"/>
-		</form>
+				</fieldset>
+				<input type="hidden" th:field="*{id}"/>
+				<input type="submit" value="Update" class="red-button"/>
+			</form>
+		</th:block>
 	</main>
 </div>
 </body>
