--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -6,42 +6,44 @@
 <div th:replace="/fragments :: standard-body-div( ~{::h1}, ~{::main})">
 	<h1>Sign up to TCBL</h1>
     <main>
-        <form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post" name="regForm"
-              onsubmit="return validatePassword()">
-            <fieldset>
-                <legend>Login details</legend>
-                <div class="row">
-                    <div class="columns large-3">
-                        <label for="userName">E-mail</label>
-                        <input type="email" th:field="*{userName}" required/>
-                    </div>
-                    <div class="columns large-3">
-                        <label for="password">Password</label>
-                        <input type="password" th:field="*{password}" autocomplete="off" required/>
-                    </div>
-                    <div class="columns large-3">
-                        <label for="cpassword">Confirm Password</label>
-                        <input type="password" id="cpassword" name="cpassword" autocomplete="off" value="" required/>
-                    </div>
-                </div>
-            </fieldset>
+        <th:block th:if="${tcblUser} != null">
+			<form action="#" th:action="@{/user/register}" th:object="${tcblUser}" method="post" name="regForm"
+				  onsubmit="return validatePassword()">
+				<fieldset>
+					<legend>Login details</legend>
+					<div class="row">
+						<div class="columns large-3">
+							<label for="userName">E-mail</label>
+							<input type="email" th:field="*{userName}" required/>
+						</div>
+						<div class="columns large-3">
+							<label for="password">Password</label>
+							<input type="password" th:field="*{password}" autocomplete="off" required/>
+						</div>
+						<div class="columns large-3">
+							<label for="cpassword">Confirm Password</label>
+							<input type="password" id="cpassword" name="cpassword" autocomplete="off" value="" required/>
+						</div>
+					</div>
+				</fieldset>
 
-            <fieldset>
-                <legend>Personal information</legend>
-                <div class="row">
-                    <div class="columns large-2">
-                        <label for="firstName">First name</label>
-                        <input type="text" th:field="*{firstName}" required/>
-                    </div>
-                    <div class="columns large-2">
-                        <label for="lastName">Last name</label>
-                        <input type="text" th:field="*{lastName}" required/>
-                    </div>
-                </div>
-            </fieldset>
+				<fieldset>
+					<legend>Personal information</legend>
+					<div class="row">
+						<div class="columns large-2">
+							<label for="firstName">First name</label>
+							<input type="text" th:field="*{firstName}" required/>
+						</div>
+						<div class="columns large-2">
+							<label for="lastName">Last name</label>
+							<input type="text" th:field="*{lastName}" required/>
+						</div>
+					</div>
+				</fieldset>
 
-            <input type="submit" value="SIGN UP NOW" class="red-button"/>
-        </form>
+				<input type="submit" value="Sign up to TCBL now" class="red-button"/>
+			</form>
+        </th:block>
     </main>
 </div>
 <script th:replace="/fragments :: validatePassword"></script>
