--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -15,7 +15,7 @@
 					<input type="email" name="mail" id="mail" required/>
 				</div>
 			</div>
-			<input type="submit" value="Send me that mail" class="red-button"/>
+			<input type="submit" value="Send me that mail now" class="red-button"/>
 		</form>
 	</main>
 </div>
