--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -28,7 +28,7 @@
 				</fieldset>
 
 				<fieldset>
-					<legend>Personal information</legend>
+					<legend>Profile information</legend>
 					<div class="row">
 						<div class="columns large-2">
 							<label for="firstName">First name</label>
