--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 			<p>TCBL login uses the OpenID Connect technology for Single Sign On to access participating TCBL Services.</p>
 			<p>When you navigate between TCBL services, your TCBL account is recognized and as far as you agree, the profile information you added to it is passed on.</p>
 			<p>You have full control over your profile information. and how it is used by other services.</p>
-			<p>If you do not have a TCBL Single Sign On account yet, this is a good time to sign up.</p>
+			<p>If you do not have a TCBL Single Sign On account yet, this is a good time to sign up for TCBL.</p>
 		</div>
 	</main>
 </div>
