--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -20,7 +20,7 @@
 							<input type="text" th:field="*{lastName}" required/><br>
 						</div>
 					</div>
-					<input type="submit" value="Update" class="red-button"/>
+					<input type="submit" value="Update" class="button button--red"/>
 				</fieldset>
 				<input type="hidden" th:field="*{id}"/>
 			</form>
