--- a/src/main/resources/templates/user/resetpw.html
+++ b/src/main/resources/templates/user/resetpw.html
@@ -16,7 +16,7 @@
 						<input type="email" name="mail" id="mail" required/>
 					</div>
 				</div>
-				<input type="submit" value="Send me that email" class="red-button"/>
+				<input type="submit" value="Send me that email" class="button button--red"/>
 			</fieldset>
 		</form>
 	</main>
