--- a/src/main/resources/templates/user/resetpwform.html
+++ b/src/main/resources/templates/user/resetpwform.html
@@ -20,7 +20,7 @@
 					</div>
 					<input type="hidden" th:value="${rpc}" name="rpc" id="rpc"/>
 				</div>
-				<input type="submit" value="Set password" class="red-button"/>
+				<input type="submit" value="Set password" class="button button--red"/>
 			</form>
 		</main>
 	</div>
