Logical renaming of currently existing links to navLinks (in contrast with upcoming appLinks)

--- a/src/main/resources/static/css/tcbl.css
+++ b/src/main/resources/static/css/tcbl.css
@@ -161,7 +161,7 @@ form .required{
     /*background-color: #cacaca;*/ /* don't delete these comments (layout testing) */
 }
 
-.tcbl-links {
+.tcbl-nav-links {
     /*background-color: #cacaca;*/ /* don't delete these comments (layout testing) */
 }
 
