Fixes issue #18. The form in the /user/info.html template now forwards tcblUser.active (and other so far unmentioned tcblUser properties).

--- a/src/main/resources/templates/user/info.html
+++ b/src/main/resources/templates/user/info.html
@@ -23,6 +23,9 @@
 					<input type="submit" value="Update" class="button button--red"/>
 				</fieldset>
 				<input type="hidden" th:field="*{id}"/>
+				<!--/* post all other tcblUser's properties in the returned TCBLUser object as well! */-->
+				<input type="hidden" th:field="*{userName}"/>
+				<input type="hidden" th:field="*{active}"/>
 			</form>
 		</th:block>
 	</main>
